--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 # Core Streamlit web interface
 streamlit>=1.28.0
 streamlit-aggrid>=0.3.0
+python-dotenv>=1.0.0
 
 # Data processing and analysis
 pandas>=2.0.0
