prepare for railway deploy

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ FFBRIDGE_BEARER_TOKEN=
 
 # Optional runtime marker
 STREAMLIT_ENV=production
+
+# ACBL data source (R2) - optional. If R2_BUCKET is set, all R2 fields below are required.
+R2_BUCKET=
+R2_PREFIX=data
+R2_ENDPOINT=
+R2_ACCESS_KEY_ID=
+R2_SECRET_ACCESS_KEY=
+R2_REGION=auto
