--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ R2_ENDPOINT=
 R2_ACCESS_KEY_ID=
 R2_SECRET_ACCESS_KEY=
 R2_REGION=auto
+
+# FFBridge disk cache directory (set to Railway Volume mount for persistent cache)
+FFBRIDGE_CACHE_DIR=/data/ffbridge
