postgress-ize acbl elo ratings

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,15 @@ R2_ACCESS_KEY_ID=
 R2_SECRET_ACCESS_KEY=
 R2_REGION=auto
 
+# PostgreSQL runtime (hybrid mode for ACBL app)
+DATABASE_URL=
+POSTGRES_HOST=
+POSTGRES_PORT=5432
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+ACBL_PG_STARTUP_REFRESH_ENABLED=1
+ACBL_PG_REFRESH_STALE_HOURS=24
+
 # FFBridge disk cache directory (set to Railway Volume mount for persistent cache)
 FFBRIDGE_CACHE_DIR=/data/ffbridge
